# c-cpp-essential

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.c
src/includes/: header.c
src/lib/: lib.c
tests/: test.c
